src/main/java/com/regtab/core/rtl/parser/TTLParser.java
// Generated from D:/yd/code/tabbyetl/src/main/antlr4/TTL.g4 by ANTLR 4.13.1
package com.regtab.core.rtl.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TTLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, ATTRIBUTE=3, VALUE=4, SKIPPED=5, FACTOR=6, CONCAT=7, RECORD=8, 
		GROUP=9, SCHEMA=10, LEFT=11, RIGHT=12, UP=13, DOWN=14, INROW=15, INCOL=16, 
		INCELL=17, ROW=18, COL=19, THIS=20, AND=21, OR=22, NOT=23, TRUE=24, FALSE=25, 
		GT=26, GE=27, LT=28, LE=29, EQ=30, NEQ=31, CONTAINS=32, MATCHES=33, PLUS=34, 
		MINUS=35, MULT=36, MOD=37, LPAREN=38, RPAREN=39, LCURLY=40, RCURLY=41, 
		LSQUARE=42, RSQUARE=43, ARROW=44, COLON=45, SEMICOLON=46, COMMA=47, DOLLAR=48, 
		QUESTION=49, DOTS=50, TAG=51, ID=52, INT=53, STRING=54, WS=55;
	public static final int
		RULE_table = 0, RULE_subtable = 1, RULE_rows = 2, RULE_label = 3, RULE_replacement = 4, 
		RULE_quantifier = 5, RULE_zeroOrOne = 6, RULE_zeroOrMore = 7, RULE_oneOrMore = 8, 
		RULE_exactly = 9, RULE_row = 10, RULE_subrows = 11, RULE_subrow = 12, 
		RULE_cells = 13, RULE_cell = 14, RULE_elements = 15, RULE_element = 16, 
		RULE_elementType = 17, RULE_tags = 18, RULE_actions = 19, RULE_action = 20, 
		RULE_actionType = 21, RULE_actionBody = 22, RULE_struct = 23, RULE_line = 24, 
		RULE_startText = 25, RULE_separator = 26, RULE_endText = 27, RULE_choice = 28, 
		RULE_choiceBody = 29, RULE_cond = 30, RULE_constr = 31, RULE_lookup = 32, 
		RULE_all = 33, RULE_direction = 34, RULE_where = 35, RULE_range = 36, 
		RULE_rowRange = 37, RULE_colRange = 38, RULE_rangeBody = 39, RULE_start = 40, 
		RULE_end = 41, RULE_relative = 42, RULE_index = 43, RULE_expr = 44, RULE_compOp = 45, 
		RULE_binaryOp = 46, RULE_func = 47, RULE_arg = 48, RULE_prop = 49, RULE_bool = 50, 
		RULE_arithmOp = 51, RULE_strOp = 52;
	private static String[] makeRuleNames() {
		return new String[] {
			"table", "subtable", "rows", "label", "replacement", "quantifier", "zeroOrOne", 
			"zeroOrMore", "oneOrMore", "exactly", "row", "subrows", "subrow", "cells", 
			"cell", "elements", "element", "elementType", "tags", "actions", "action", 
			"actionType", "actionBody", "struct", "line", "startText", "separator", 
			"endText", "choice", "choiceBody", "cond", "constr", "lookup", "all", 
			"direction", "where", "range", "rowRange", "colRange", "rangeBody", "start", 
			"end", "relative", "index", "expr", "compOp", "binaryOp", "func", "arg", 
			"prop", "bool", "arithmOp", "strOp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'!'", "'a'", "'v'", "'s'", null, null, null, null, null, 
			"'left'", "'right'", "'up'", "'down'", "'row'", "'col'", "'cell'", "'r'", 
			"'c'", "'this'", "'&'", "'|'", "'~'", "'TRUE'", "'FALSE'", "'>'", "'>='", 
			"'<'", "'<='", "'=='", "'!='", "'contains'", "'matches'", "'+'", "'-'", 
			"'*'", "'%'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'->'", "':'", 
			"';'", "','", "'$'", "'?'", "'..'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "ATTRIBUTE", "VALUE", "SKIPPED", "FACTOR", "CONCAT", 
			"RECORD", "GROUP", "SCHEMA", "LEFT", "RIGHT", "UP", "DOWN", "INROW", 
			"INCOL", "INCELL", "ROW", "COL", "THIS", "AND", "OR", "NOT", "TRUE", 
			"FALSE", "GT", "GE", "LT", "LE", "EQ", "NEQ", "CONTAINS", "MATCHES", 
			"PLUS", "MINUS", "MULT", "MOD", "LPAREN", "RPAREN", "LCURLY", "RCURLY", 
			"LSQUARE", "RSQUARE", "ARROW", "COLON", "SEMICOLON", "COMMA", "DOLLAR", 
			"QUESTION", "DOTS", "TAG", "ID", "INT", "STRING", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TTL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TTLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TableContext extends ParserRuleContext {
		public List<SubtableContext> subtable() {
			return getRuleContexts(SubtableContext.class);
		}
		public SubtableContext subtable(int i) {
			return getRuleContext(SubtableContext.class,i);
		}
		public TableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).enterTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).exitTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TTLVisitor ) return ((TTLVisitor<? extends T>)visitor).visitTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableContext table() throws RecognitionException {
		TableContext _localctx = new TableContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_table);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(106);
				subtable();
				}
				}
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2257297371824128L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubtableContext extends ParserRuleContext {
		public List<RowContext> row() {
			return getRuleContexts(RowContext.class);
		}
		public RowContext row(int i) {
			return getRuleContext(RowContext.class,i);
		}
		public RowsContext rows() {
			return getRuleContext(RowsContext.class,0);
		}
		public SubtableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subtable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).enterSubtable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).exitSubtable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TTLVisitor ) return ((TTLVisitor<? extends T>)visitor).visitSubtable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubtableContext subtable() throws RecognitionException {
		SubtableContext _localctx = new SubtableContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_subtable);
		try {
			int _alt;
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LSQUARE:
			case TAG:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(112); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(111);
						row();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(114); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				}
				break;
			case LCURLY:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				rows();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RowsContext extends ParserRuleContext {
		public TerminalNode LCURLY() { return getToken(TTLParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(TTLParser.RCURLY, 0); }
		public List<RowContext> row() {
			return getRuleContexts(RowContext.class);
		}
		public RowContext row(int i) {
			return getRuleContext(RowContext.class,i);
		}
		public TerminalNode ARROW() { return getToken(TTLParser.ARROW, 0); }
		public ActionsContext actions() {
			return getRuleContext(ActionsContext.class,0);
		}
		public TerminalNode COLON() { return getToken(TTLParser.COLON, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public RowsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rows; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).enterRows(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).exitRows(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TTLVisitor ) return ((TTLVisitor<? extends T>)visitor).visitRows(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RowsContext rows() throws RecognitionException {
		RowsContext _localctx = new RowsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_rows);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(LCURLY);
			setState(121); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(120);
				row();
				}
				}
				setState(123); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LSQUARE || _la==TAG );
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ARROW) {
				{
				setState(125);
				match(ARROW);
				setState(126);
				actions();
				}
			}

			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(129);
				match(COLON);
				setState(130);
				cond();
				}
			}

			setState(133);
			match(RCURLY);
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(134);
				quantifier();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelContext extends ParserRuleContext {
		public TerminalNode TAG() { return getToken(TTLParser.TAG, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).exitLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TTLVisitor ) return ((TTLVisitor<? extends T>)visitor).visitLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(TAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReplacementContext extends ParserRuleContext {
		public TerminalNode TAG() { return getToken(TTLParser.TAG, 0); }
		public ReplacementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_replacement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).enterReplacement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).exitReplacement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TTLVisitor ) return ((TTLVisitor<? extends T>)visitor).visitReplacement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReplacementContext replacement() throws RecognitionException {
		ReplacementContext _localctx = new ReplacementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_replacement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(TAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuantifierContext extends ParserRuleContext {
		public ZeroOrOneContext zeroOrOne() {
			return getRuleContext(ZeroOrOneContext.class,0);
		}
		public ZeroOrMoreContext zeroOrMore() {
			return getRuleContext(ZeroOrMoreContext.class,0);
		}
		public OneOrMoreContext oneOrMore() {
			return getRuleContext(OneOrMoreContext.class,0);
		}
		public ExactlyContext exactly() {
			return getRuleContext(ExactlyContext.class,0);
		}
		public QuantifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quantifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).enterQuantifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).exitQuantifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TTLVisitor ) return ((TTLVisitor<? extends T>)visitor).visitQuantifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuantifierContext quantifier() throws RecognitionException {
		QuantifierContext _localctx = new QuantifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_quantifier);
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUESTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				zeroOrOne();
				}
				break;
			case MULT:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				zeroOrMore();
				}
				break;
			case PLUS:
				enterOuterAlt(_localctx, 3);
				{
				setState(143);
				oneOrMore();
				}
				break;
			case LCURLY:
				enterOuterAlt(_localctx, 4);
				{
				setState(144);
				exactly();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ZeroOrOneContext extends ParserRuleContext {
		public TerminalNode QUESTION() { return getToken(TTLParser.QUESTION, 0); }
		public ZeroOrOneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_zeroOrOne; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).enterZeroOrOne(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).exitZeroOrOne(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TTLVisitor ) return ((TTLVisitor<? extends T>)visitor).visitZeroOrOne(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ZeroOrOneContext zeroOrOne() throws RecognitionException {
		ZeroOrOneContext _localctx = new ZeroOrOneContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_zeroOrOne);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(QUESTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ZeroOrMoreContext extends ParserRuleContext {
		public TerminalNode MULT() { return getToken(TTLParser.MULT, 0); }
		public ZeroOrMoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_zeroOrMore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).enterZeroOrMore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).exitZeroOrMore(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TTLVisitor ) return ((TTLVisitor<? extends T>)visitor).visitZeroOrMore(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ZeroOrMoreContext zeroOrMore() throws RecognitionException {
		ZeroOrMoreContext _localctx = new ZeroOrMoreContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_zeroOrMore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(MULT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OneOrMoreContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(TTLParser.PLUS, 0); }
		public OneOrMoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oneOrMore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).enterOneOrMore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).exitOneOrMore(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TTLVisitor ) return ((TTLVisitor<? extends T>)visitor).visitOneOrMore(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OneOrMoreContext oneOrMore() throws RecognitionException {
		OneOrMoreContext _localctx = new OneOrMoreContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_oneOrMore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(PLUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExactlyContext extends ParserRuleContext {
		public TerminalNode LCURLY() { return getToken(TTLParser.LCURLY, 0); }
		public TerminalNode INT() { return getToken(TTLParser.INT, 0); }
		public TerminalNode RCURLY() { return getToken(TTLParser.RCURLY, 0); }
		public ExactlyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exactly; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).enterExactly(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).exitExactly(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TTLVisitor ) return ((TTLVisitor<? extends T>)visitor).visitExactly(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExactlyContext exactly() throws RecognitionException {
		ExactlyContext _localctx = new ExactlyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_exactly);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(LCURLY);
			setState(154);
			match(INT);
			setState(155);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RowContext extends ParserRuleContext {
		public TerminalNode LSQUARE() { return getToken(TTLParser.LSQUARE, 0); }
		public TerminalNode RSQUARE() { return getToken(TTLParser.RSQUARE, 0); }
		public SubrowsContext subrows() {
			return getRuleContext(SubrowsContext.class,0);
		}
		public ReplacementContext replacement() {
			return getRuleContext(ReplacementContext.class,0);
		}
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public RowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_row; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).enterRow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TTLListener ) ((TTLListener)listener).exitRow(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TTLVisitor ) return ((TTLVisitor<? extends T>)visitor).visitRow(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RowContext row() throws RecognitionException {
		RowContext _localctx = new RowContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_row);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TAG) {
				{
				setState(157);
				label();
				}
			}
